@@ -1,3 +1,4 @@
+* Add method to sort quantities for assignation
 * Add warehouse properties to move
 * Allow view location as parent of warehouse
 
